--- a/package.json
+++ b/package.json
@@ -4,5 +4,21 @@
   "description": "A crowd funding app for the Ethereum blockchain",
   "main": "index.js",
   "author": "Danny Lim (dalime)",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "lint:sol": "solhint 'contracts/**/*.sol'"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.8.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solhint": "^5.0.2"
+  }
 }
