--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,14 @@ subgraph/src/types/
 .DS_Store
 .env
 
+# Artifacts
+artifacts/
+
+# Cache
+cache/
+
+# Errors
+yarn-error.log
+
 # Local error
 nohup.out
