--- a/package.json
+++ b/package.json
@@ -6,19 +6,33 @@
   "author": "Danny Lim (dalime)",
   "license": "MIT",
   "scripts": {
-    "lint:sol": "solhint 'contracts/**/*.sol'"
+    "lint:sol": "solhint 'contracts/**/*.sol'",
+    "test": "npx hardhat test"
   },
+  "type": "module",
   "devDependencies": {
+    "@ethereum-waffle/chai": "^4.0.10",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
+    "@types/sinon-chai": "^3.2.3",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "chai": "^5.1.1",
+    "dotenv": "^16.4.5",
     "eslint": "^9.8.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.2.1",
+    "ethereum-waffle": "*",
+    "hardhat": "^2.22.7",
     "prettier": "^3.3.3",
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^5.0.2"
+  },
+  "dependencies": {
+    "ethers": "^5.0.0"
   }
 }
