Changed name of frontend repos

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eth-crowd-funding",
+  "name": "election-crypto-crowdfunding",
   "version": "1.0.0",
-  "description": "A crowd funding app for the Ethereum blockchain",
+  "description": "A crowd funding app for the elections with Ethereum and Bitcoin",
   "main": "index.js",
   "author": "Danny Lim (dalime)",
   "license": "MIT",
