--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "lint:sol": "solhint 'contracts/**/*.sol'",
-    "test": "npx hardhat test"
+    "test": "npx hardhat test",
+    "start:frontend": "cd frontend && npm run dev"
   },
   "type": "module",
   "devDependencies": {
