--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "solhint": "^5.0.2"
   },
   "dependencies": {
-    "ethers": "^5.0.0"
+    "@walletconnect/web3-provider": "^1.8.0",
+    "ethers": "^6.13.2",
+    "web3modal": "^1.9.12"
   }
 }
