--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
+    "ethers": "^6.13.2",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
