--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
-    "ethers": "^6.13.2",
+    "@tanstack/react-query": "^5.51.23",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
     "next-themes": "^0.3.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "2.x",
+    "wagmi": "^2.12.5"
   },
   "devDependencies": {
     "@types/node": "^20",
