--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@walletconnect/web3-provider": "^1.8.0",
-    "ethers": "^6.13.2",
+    "ethers": "5",
     "web3modal": "^1.9.12"
   }
 }
