--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-responsive": "^10.0.0",
     "viem": "2.x",
     "wagmi": "^2.12.5"
   },
