--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["node", "jest"]
+    "types": ["node", "jest"],
+    "target": "ES2020"
   },
   "include": [
     "next-env.d.ts",
