--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cache": "jest --clearCache"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
