--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,16 +1,18 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
+    "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
+    "module": "CommonJS",
+    "moduleResolution": "Node",
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
+    "isolatedModules": false,
+    "jsx": "react",
     "incremental": true,
     "plugins": [
       {
@@ -21,14 +23,14 @@
       "@/*": ["./src/*"]
     },
     "types": ["node", "jest"],
-    "target": "ES2020"
+    "target": "ESNext"
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "jest.config.js"
+    "jest.config.js", "jest.setup.js",
   ],
   "exclude": ["node_modules"]
 }
