--- a/client/package.json
+++ b/client/package.json
@@ -52,7 +52,8 @@
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "util": "^0.12.5"
   },
   "type": "module"
 }
